gcc/testsuite/algol68/compile/error-pragmat-access-1.a68
pr access Foo in  pr { dg-error "expected string" } 

begin prio // = 8;
      op (int,int)int // = lala;
      proc lala = (int a, b) int: a + b;
      proc void jeje = skip;
      skip
end
